--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,7 +67,7 @@ video {
     height: auto;
 }
 
-.project_room {
+.project-room {
     flex-direction: row;
     align-items: flex-start;
 }
@@ -88,15 +88,15 @@ video {
 }
 
 
-.filme_video {
+.filme-video {
     width: 45vmin;
 }
 
-.video_project {
+.video-project {
     height: 34vmin;
 }
 
-/* .image_project {
+/* .image-project {
     width: 400px;
 } */
 
@@ -117,18 +117,18 @@ video {
     /* align-self: flex-end; */
 }
 
-.text_gabinete {
+.text-gabinete {
     margin-top: 2vh;
     max-width: 1800px;
 }
 
-.project_room {
+.project-room {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
 }
 
-.text_side {
+.text-side {
     max-width: 61.3vh;
     margin: 0vh 0vh 0vh 1.5vh;
     font-size: 1.7vh;
@@ -240,14 +240,19 @@ li .section-content {
     align-items: flex-end;
 }
 
-.manual_text {
+.manual-text {
     width: 50vh;
-    margin-right: 3vh;
+    margin: 10vh 3vh 3vh 0vh;
 }
 
-#manual_de_producao {
-    width: 80vh;
+#manual-de-producao {
+    width: 50vh;
     height: auto;
+}
+
+.imagens-manual {
+    display: flex;
+    flex-direction: row;
 }
 
 .informacao {
@@ -259,9 +264,84 @@ a {
     color: rgb(205, 199, 175);;
 }
 
+.image-text {
+    position: relative;
+    margin: 0vh 1vh 1vh 0vh;
+}
+
+.text-top {
+    position: absolute;
+    top: 20vh;
+    width: 30vh;
+    padding-left: 2vh;
+    background-color: rgb(26, 18, 17);
+}
+
 .footer {
     display: flex;
     flex-direction: row;
+    margin-top: -12vh;
+}
+
+/* .magnify{
+    position: absolute;
+    z-index: 20;
+    background-repeat: no-repeat;
+    background-color: white;
+    box-shadow: inset 0 0 20px rgba(0,0,0,.5);
+    display: none;
+    cursor: none;
+} */
+
+@media screen and (max-width:960px) {
+    
+    /* TITULOS DIVISÓRIAS */
+
+    li .section-title h1 {
+        font-size: 16px;
+        margin: 5vh 0vh 5vh 0vh;
+    }
+
+    /* MAIN PAGE */
+
+    .video {
+        align-self: flex-end;
+        justify-content: flex-end;
+        margin: 0vh 2vh 1vh 0vh;
+        width: 500px;
+    }
+
+    .text {
+        width: 500px;
+        font-size: 11pt;
+    }
+
+    /* PROJECT ROOM */
+
+    img, .video-project {
+        width: 34vmin;
+        height: auto;
+    }
+
+    .text-side {
+        width: 34.5vmin;
+        font-size: 11pt;
+    }
+
+    /* GABINETE DE FICCAO */
+
+    .video-gabinete {
+        flex-direction: column;
+        display: flex;
+        margin-left: 5vh;
+        width: 63vmin;
+    }
+
+    .text-gabinete {
+        margin-top: 1vh;
+        max-width: 2000px;
+    }    
+    
 }
 
 @media screen and (max-width:600px) {
