--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,6 +67,15 @@ video {
     height: auto;
 }
 
+.text-landing {
+    font-size: 2.3vmin;
+}
+
+h1 {
+    font-weight: 100;
+    font-size: 10vh;
+}
+
 .project-room {
     flex-direction: row;
     align-items: flex-start;
@@ -86,7 +95,6 @@ video {
     margin-left: 5vh;
     width: 120vmin;
 }
-
 
 .filme-video {
     width: 45vmin;
@@ -234,6 +242,11 @@ li .section-content {
     /* min-width: none; */
 }
 
+.active > .first {
+    display: none;
+}
+
+
 .manual {
     display: flex;
     flex-direction: row;
@@ -325,7 +338,7 @@ a {
 
     .text-side {
         width: 34.5vmin;
-        font-size: 11pt;
+        font-size: 9pt;
     }
 
     /* GABINETE DE FICCAO */
@@ -341,7 +354,12 @@ a {
         margin-top: 1vh;
         max-width: 2000px;
     }    
+
+    /* O FILME */
     
+    .filme-video {
+        width: 25vmin;
+    }
 }
 
 @media screen and (max-width:600px) {
